--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3Leathers · Custom Leather by Walter Lewis III</title>
-
-  <!-- External stylesheet -->
   <link rel="stylesheet" href="style.css?v=6" />
 </head>
 
@@ -27,7 +25,6 @@
   <!-- Slide-out menu -->
   <nav id="sideMenu" aria-label="Site navigation">
     <a href="#top"   class="navlink">Home</a>
-    <!-- Removed Support the Craft from here -->
     <a href="shop.html"    class="navlink">Shop</a>
     <a href="custom.html"  class="navlink">Custom Requests</a>
     <a href="cart.html"    class="navlink">Cart</a>
@@ -40,7 +37,6 @@
       <h1>3Leathers</h1>
       <h2>Custom Leather by Walter Lewis III</h2>
 
-      <!-- Top-right contact block -->
       <div class="contact-top">
         Bridgeport, West Virginia ·
         <a href="tel:+13046691412">(304) 669-1412</a> ·
@@ -52,7 +48,7 @@
         Every item is cut, stitched, and finished by hand. Rugged. Refined. Personal.
       </p>
 
-      <!-- Unified Gallery with only selected images (first 4 and last 5) -->
+      <!-- Unified Gallery with only selected images -->
       <section id="gallery" aria-label="Gallery">
         <div class="gallery-grid">
           <!-- First 4 photos -->
@@ -106,7 +102,7 @@
     </div>
   </main>
 
-  <!-- Script: hamburger toggle (fixed logic) -->
+  <!-- Script: hamburger toggle -->
   <script>
   (function () {
     const menu = document.getElementById('sideMenu');
