--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="3Leathers — Custom leather goods, handmade in Bridgeport, WV" />
+  <meta name="keywords" content="leather goods, custom leather, handmade, wallets, holsters, belts, West Virginia" />
+  <meta name="author" content="Walter Lewis III" />
   <title>3Leathers — Custom Leather by Walter Lewis III</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="images/logo-icon.png" />
 </head>
 <body id="top">
   <!-- Hamburger Menu Button -->
@@ -34,6 +38,7 @@
         <p><a href="mailto:wwl3leathers@outlook.com">Email</a></p>
       </div>
 
+      <!-- Gallery Section -->
       <div class="gallery">
         <h3>Gallery</h3>
         <!-- First 4 images -->
@@ -70,10 +75,17 @@
     </div>
   </main>
 
+  <!-- Support Section -->
   <div class="contact-bottom">
     <p>Support the Craft:</p>
     <p>Cash App: <strong>$unclebutch3</strong> | PayPal: <strong>paypal.me/3Leathers</strong></p>
   </div>
+
+  <!-- Footer (if needed) -->
+  <footer>
+    <p>&copy; 2025 3Leathers | All Rights Reserved</p>
+    <p>Handmade in Bridgeport, WV | Custom Leather Goods</p>
+  </footer>
 
   <script>
     const menuButton = document.getElementById('menuButton');
