--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="leather goods, custom leather, handmade, wallets, holsters, belts, West Virginia" />
   <meta name="author" content="Walter Lewis III" />
   <title>3Leathers — Custom Leather by Walter Lewis III</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=menu2" />
   <link rel="icon" href="images/logo-icon.png" />
 </head>
 <body id="top">
