--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Main Navigation -->
   <nav id="sideMenu" aria-label="Site navigation">
-    <a href="home.html" class="navLink">Home</a>
+    <a href="index.html" class="navLink">Home</a>
     <a href="shop.html" class="navLink">Shop</a>
     <a href="contact.html" class="navLink">Contact</a>
     <a href="faq.html" class="navLink">FAQ</a>
