--- a/index.html
+++ b/index.html
@@ -113,3 +113,31 @@
 
 </body>
 </html>
+<script>
+  // Close on link click
+  document.querySelectorAll('#sideMenu .navLink').forEach(a => {
+    a.addEventListener('click', () => {
+      sideMenu.classList.remove('open');
+      menuButton.setAttribute('aria-expanded', 'false');
+    });
+  });
+
+  // Close when clicking outside the menu or hamburger
+  document.addEventListener('click', (e) => {
+    if (!sideMenu.classList.contains('open')) return;
+    const insideMenu = sideMenu.contains(e.target);
+    const onHamburger = menuButton.contains(e.target);
+    if (!insideMenu && !onHamburger) {
+      sideMenu.classList.remove('open');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+
+  // Close on Esc key
+  document.addEventListener('keydown', (e) => {
+    if (e.key === 'Escape' && sideMenu.classList.contains('open')) {
+      sideMenu.classList.remove('open');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+</script>
