--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Walter Lewis III" />
   <title>3Leathers — Custom Leather by Walter Lewis III</title>
   <link rel="stylesheet" href="style.css?v=menu2" />
-  <link rel="icon" href="images/logo-icon.png" />
+  <img id="logo" src="images/Logo-min.jpg" alt="3Leathers logo" />
 </head>
 <body id="top">
   <!-- Hamburger Menu Button -->
