--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
   <meta name="author" content="Walter Lewis III" />
   <title>3Leathers — Custom Leather by Walter Lewis III</title>
   <link rel="stylesheet" href="style.css?v=menu2" />
-  <img id="logo" src="images/Logo-min.jpg" alt="3Leathers logo" />
 </head>
 <body id="top">
+
+  <!-- Header with Logo (single source of truth) -->
+  <header>
+    <img id="logo" src="images/Logo-min.jpg" alt="3Leathers logo" />
+  </header>
+
   <!-- Hamburger Menu Button -->
- <button id="menuButton"
-        class="menu-icon"
-        aria-label="Menu"
-        aria-controls="sideMenu"
-        aria-expanded="false"
-        type="button"
-        style="position:fixed; top:10px; left:10px; z-index:99999; cursor:pointer;">
-  ☰
-</button>
+  <button id="menuButton"
+          class="menu-icon"
+          aria-label="Menu"
+          aria-controls="sideMenu"
+          aria-expanded="false"
+          type="button"
+          style="position:fixed; top:10px; left:10px; z-index:99999; cursor:pointer;">
+    ☰
+  </button>
 
   <!-- Main Navigation -->
   <nav id="sideMenu" aria-label="Site navigation">
@@ -30,17 +35,12 @@
     <a href="faq.html" class="navLink">FAQ</a>
   </nav>
 
-  <!-- Header with Logo and Navigation -->
-  <header>
-    <img id="logo" src="images/logo-img.png" alt="3Leathers logo" />
-  </header>
-
   <!-- Main Content -->
   <main>
     <div class="content">
       <h2>Custom Leather by Walter Lewis III</h2>
       <div class="contact-top">
-        <p>Bridgeport, West Virginia - (304) 669-1412.</p>
+        <p>Bridgeport, West Virginia — (304) 669-1412</p>
         <p><a href="mailto:wwl3leathers@outlook.com">Email</a></p>
       </div>
 
@@ -48,35 +48,16 @@
       <div class="gallery">
         <h3>Gallery</h3>
         <!-- First 4 images -->
-        <div class="gallery-item">
-          <img src="images/Repair1-min.jpeg" alt="Repair work 1" />
-        </div>
-        <div class="gallery-item">
-          <img src="images/Repair2-min.jpeg" alt="Repair work 2" />
-        </div>
-        <div class="gallery-item">
-          <img src="images/Repair3-min.jpeg" alt="Repair work 3" />
-        </div>
-        <div class="gallery-item">
-          <img src="images/Repair4-min.jpeg" alt="Repair work 4" />
-        </div>
-
+        <div class="gallery-item"><img src="images/Repair1-min.jpeg" alt="Repair work 1" /></div>
+        <div class="gallery-item"><img src="images/Repair2-min.jpeg" alt="Repair work 2" /></div>
+        <div class="gallery-item"><img src="images/Repair3-min.jpeg" alt="Repair work 3" /></div>
+        <div class="gallery-item"><img src="images/Repair4-min.jpeg" alt="Repair work 4" /></div>
         <!-- Last 5 images -->
-        <div class="gallery-item">
-          <img src="images/QuickDraw-min.jpeg" alt="Quick (new holster)" />
-        </div>
-        <div class="gallery-item">
-          <img src="images/OWB-min.jpeg" alt="OWB holster" />
-        </div>
-        <div class="gallery-item">
-          <img src="images/Holster-OWB-min.jpeg" alt="Holster OWB" />
-        </div>
-        <div class="gallery-item">
-          <img src="images/Custom-min.jpeg" alt="Holster - custom 2" />
-        </div>
-        <div class="gallery-item">
-          <img src="images/GunBelt-min.jpeg" alt="Gun belt 1" />
-        </div>
+        <div class="gallery-item"><img src="images/QuickDraw-min.jpeg" alt="Quick (new holster)" /></div>
+        <div class="gallery-item"><img src="images/OWB-min.jpeg" alt="OWB holster" /></div>
+        <div class="gallery-item"><img src="images/Holster-OWB-min.jpeg" alt="Holster OWB" /></div>
+        <div class="gallery-item"><img src="images/Custom-min.jpeg" alt="Holster - custom 2" /></div>
+        <div class="gallery-item"><img src="images/GunBelt-min.jpeg" alt="Gun belt 1" /></div>
       </div>
     </div>
   </main>
@@ -87,57 +68,59 @@
     <p>Cash App: <strong>$unclebutch3</strong> | PayPal: <strong>paypal.me/3Leathers</strong></p>
   </div>
 
-  <!-- Footer (if needed) -->
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 3Leathers | All Rights Reserved</p>
     <p>Handmade in Bridgeport, WV | Custom Leather Goods</p>
   </footer>
 
+  <!-- Menu logic -->
   <script>
-  const menuButton = document.getElementById('menuButton');
-  const sideMenu   = document.getElementById('sideMenu');
+    const menuButton = document.getElementById('menuButton');
+    const sideMenu   = document.getElementById('sideMenu');
 
-  function toggleMenu() {
-    const isOpen = sideMenu.classList.toggle('open');
-    menuButton.setAttribute('aria-expanded', String(isOpen));
-  }
-
-  menuButton.addEventListener('click', toggleMenu);
-  menuButton.addEventListener('keydown', (e) => {
-    if (e.key === 'Enter' || e.key === ' ') {
-      e.preventDefault();
-      toggleMenu();
+    function toggleMenu() {
+      const isOpen = sideMenu.classList.toggle('open');
+      menuButton.setAttribute('aria-expanded', String(isOpen));
     }
-  });
-</script>
 
+    menuButton.addEventListener('click', toggleMenu);
+    menuButton.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' || e.key === ' ') {
+        e.preventDefault();
+        toggleMenu();
+      }
+    });
+  </script>
+
+  <!-- Close menu on link click, outside click, or Esc -->
+  <script>
+    // Close on link click
+    document.querySelectorAll('#sideMenu .navLink').forEach(a => {
+      a.addEventListener('click', () => {
+        sideMenu.classList.remove('open');
+        menuButton.setAttribute('aria-expanded', 'false');
+      });
+    });
+
+    // Close when clicking outside the menu or hamburger
+    document.addEventListener('click', (e) => {
+      if (!sideMenu.classList.contains('open')) return;
+      const insideMenu = sideMenu.contains(e.target);
+      const onHamburger = menuButton.contains(e.target);
+      if (!insideMenu && !onHamburger) {
+        sideMenu.classList.remove('open');
+        menuButton.setAttribute('aria-expanded', 'false');
+      }
+    });
+
+    // Close on Esc key
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape' && sideMenu.classList.contains('open')) {
+        sideMenu.classList.remove('open');
+        menuButton.setAttribute('aria-expanded', 'false');
+      }
+    });
+  </script>
 </body>
 </html>
-<script>
-  // Close on link click
-  document.querySelectorAll('#sideMenu .navLink').forEach(a => {
-    a.addEventListener('click', () => {
-      sideMenu.classList.remove('open');
-      menuButton.setAttribute('aria-expanded', 'false');
-    });
-  });
-
-  // Close when clicking outside the menu or hamburger
-  document.addEventListener('click', (e) => {
-    if (!sideMenu.classList.contains('open')) return;
-    const insideMenu = sideMenu.contains(e.target);
-    const onHamburger = menuButton.contains(e.target);
-    if (!insideMenu && !onHamburger) {
-      sideMenu.classList.remove('open');
-      menuButton.setAttribute('aria-expanded', 'false');
-    }
-  });
-
-  // Close on Esc key
-  document.addEventListener('keydown', (e) => {
-    if (e.key === 'Escape' && sideMenu.classList.contains('open')) {
-      sideMenu.classList.remove('open');
-      menuButton.setAttribute('aria-expanded', 'false');
-    }
-  });
-</script>
