--- a/index.html
+++ b/index.html
@@ -1,126 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="3Leathers — Custom leather goods, handmade in Bridgeport, WV" />
-  <meta name="keywords" content="leather goods, custom leather, handmade, wallets, holsters, belts, West Virginia" />
-  <meta name="author" content="Walter Lewis III" />
-  <title>3Leathers — Custom Leather by Walter Lewis III</title>
-  <link rel="stylesheet" href="style.css?v=menu2" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>3Leathers — Handmade Leather by Walter Lewis III</title>
+  <meta name="description" content="No machines. Made by hand. Wallets, purses, holsters and custom leatherwork by 3Leathers." />
+  <style>
+    :root{
+      --bg:#0b0b0b; --ink:#f8f5e3; --accent:#d6b14a; --muted:rgba(255,255,255,.08);
+    }
+    html,body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
+    a{color:var(--accent);text-decoration:none}
+    header{position:sticky;top:0;z-index:10;background:rgba(0,0,0,.6);backdrop-filter:saturate(140%) blur(6px);border-bottom:1px solid var(--muted)}
+    .wrap{max-width:1100px;margin:auto;padding:16px}
+    .row{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    .brand{display:flex;align-items:center;gap:10px}
+    .brand img{height:40px;border-radius:4px}
+    nav a{margin-left:10px}
+    .hero{
+      padding:48px 16px;border-bottom:1px solid var(--muted);
+      background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.7)), url("images/Backdrop2-min.jpeg") center/cover no-repeat;
+      text-align:center;
+    }
+    .hero h1{margin:0 0 8px 0;font-size:clamp(28px,5vw,44px)}
+    .hero p{margin:0 auto;max-width:820px;opacity:.9}
+    .cta{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;margin-top:14px}
+    .pill{padding:10px 16px;border-radius:999px;background:var(--accent);color:#000;font-weight:700}
+    .pill.secondary{background:#2a2a2a;color:var(--ink);border:1px solid var(--muted)}
+    h2{margin:20px 0 10px}
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
+    @media (max-width:900px){.grid{grid-template-columns:1fr 1fr}}
+    @media (max-width:640px){.grid{grid-template-columns:1fr}}
+    .card{background:rgba(0,0,0,.55);border:1px solid var(--muted);border-radius:14px;overflow:hidden}
+    .card img{width:100%;height:220px;object-fit:cover;background:#111;display:block}
+    .pad{padding:14px}
+    footer{margin-top:20px;border-top:1px solid var(--muted);background:rgba(0,0,0,.6)}
+    .donos{padding:20px 16px;border-top:1px solid var(--muted)}
+    .donos h3{text-align:center;margin:0 0 8px 0}
+    .donation-buttons{display:flex;flex-wrap:wrap;justify-content:center;gap:10px;margin-top:8px}
+    .donate-btn{background-color:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700}
+    .donate-btn.ca{background-color:#3ddc84}
+    .fine{color:#cfc8a8;text-align:center;padding:14px 16px}
+  </style>
 </head>
-<body id="top">
-
-  <!-- Header with Logo (single source of truth) -->
+<body>
   <header>
-    <img id="logo" src="images/Logo-min.jpg" alt="3Leathers logo" />
+    <div class="wrap row">
+      <div class="brand">
+        <img src="images/Logo-min.jpg" alt="3Leathers logo">
+        <strong>3Leathers</strong>
+      </div>
+      <nav>
+        <a href="index.html"><strong>Home</strong></a> •
+        <a href="shop.html">Shop</a> •
+        <a href="custom.html">Custom</a> •
+        <a href="checkout.html">Checkout</a>
+      </nav>
+    </div>
   </header>
 
-  <!-- Hamburger Menu Button -->
-  <button id="menuButton"
-          class="menu-icon"
-          aria-label="Menu"
-          aria-controls="sideMenu"
-          aria-expanded="false"
-          type="button"
-          style="position:fixed; top:10px; left:10px; z-index:99999; cursor:pointer;">
-    ☰
-  </button>
-
-  <!-- Main Navigation -->
-  <nav id="sideMenu" aria-label="Site navigation">
-    <a href="index.html" class="navLink">Home</a>
-    <a href="shop.html" class="navLink">Shop</a>
-    <a href="contact.html" class="navLink">Contact</a>
-    <a href="faq.html" class="navLink">FAQ</a>
-  </nav>
-
-  <!-- Main Content -->
-  <main>
-    <div class="content">
-      <h2>Custom Leather by Walter Lewis III</h2>
-      <div class="contact-top">
-        <p>Bridgeport, West Virginia — (304) 669-1412</p>
-        <p><a href="mailto:wwl3leathers@outlook.com">Email</a></p>
+  <section class="hero">
+    <div class="wrap">
+      <h1>No machines. Made by hand.</h1>
+      <p>Hand-cut, hand-stitched leather goods from Bridgeport, WV — wallets, purses, and custom holsters. Every piece built to order by Walter Lewis III.</p>
+      <div class="cta">
+        <a class="pill" href="shop.html">Shop Now</a>
+        <a class="pill secondary" href="custom.html">Request Something Custom</a>
       </div>
+    </div>
+  </section>
 
-      <!-- Gallery Section -->
-      <div class="gallery">
-        <h3>Gallery</h3>
-        <!-- First 4 images -->
-        <div class="gallery-item"><img src="images/Repair1-min.jpeg" alt="Repair work 1" /></div>
-        <div class="gallery-item"><img src="images/Repair2-min.jpeg" alt="Repair work 2" /></div>
-        <div class="gallery-item"><img src="images/Repair3-min.jpeg" alt="Repair work 3" /></div>
-        <div class="gallery-item"><img src="images/Repair4-min.jpeg" alt="Repair work 4" /></div>
-        <!-- Last 5 images -->
-        <div class="gallery-item"><img src="images/QuickDraw-min.jpeg" alt="Quick (new holster)" /></div>
-        <div class="gallery-item"><img src="images/OWB-min.jpeg" alt="OWB holster" /></div>
-        <div class="gallery-item"><img src="images/Holster-OWB-min.jpeg" alt="Holster OWB" /></div>
-        <div class="gallery-item"><img src="images/Custom-min.jpeg" alt="Holster - custom 2" /></div>
-        <div class="gallery-item"><img src="images/GunBelt-min.jpeg" alt="Gun belt 1" /></div>
-      </div>
+  <main class="wrap">
+    <h2>Featured Work</h2>
+    <div class="grid">
+      <article class="card">
+        <img src="images/Purse04-min.jpg" alt="Handmade purse">
+        <div class="pad">
+          <strong>Purses</strong>
+          <p>Classic shapes, burnished edges, built to last.</p>
+          <a class="pill" href="shop.html">See More</a>
+        </div>
+      </article>
+      <article class="card">
+        <img src="images/Holster-BF-min.jpeg" alt="Custom belt-fit holster">
+        <div class="pad">
+          <strong>Holsters</strong>
+          <p>Custom-fit belt holsters, molded and finished by hand.</p>
+          <a class="pill" href="shop.html">See More</a>
+        </div>
+      </article>
+      <article class="card">
+        <img src="images/Quick-Draw-min.jpeg" alt="Quick-draw holster">
+        <div class="pad">
+          <strong>Quick-Draw</strong>
+          <p>Fast-access profiles with tuned retention.</p>
+          <a class="pill" href="shop.html">See More</a>
+        </div>
+      </article>
     </div>
   </main>
 
-  <!-- Support Section at bottom -->
-  <div class="contact-bottom">
-    <p>Support the Craft:</p>
-    <p>Cash App: <strong>$unclebutch3</strong> | PayPal: <strong>paypal.me/3Leathers</strong></p>
-  </div>
-
-  <!-- Footer -->
+  <!-- Donations (both PayPal and Cash App) -->
   <footer>
-    <p>&copy; 2025 3Leathers | All Rights Reserved</p>
-    <p>Handmade in Bridgeport, WV | Custom Leather Goods</p>
+    <section class="donos">
+      <h3>Support 3Leathers — No machines. Made by hand.</h3>
+      <div class="donation-buttons">
+        <a href="https://www.paypal.me/WalterLewis675/5" target="_blank" class="donate-btn">$5</a>
+        <a href="https://www.paypal.me/WalterLewis675/10" target="_blank" class="donate-btn">$10</a>
+        <a href="https://www.paypal.me/WalterLewis675/20" target="_blank" class="donate-btn">$20</a>
+        <a href="https://www.paypal.me/WalterLewis675/50" target="_blank" class="donate-btn">$50</a>
+        <a href="https://www.paypal.me/WalterLewis675" target="_blank" class="donate-btn">Custom</a>
+      </div>
+      <div class="donation-buttons" style="margin-top:10px">
+        <a href="https://cash.app/$UncleButch3/5" target="_blank" class="donate-btn ca">$5</a>
+        <a href="https://cash.app/$UncleButch3/10" target="_blank" class="donate-btn ca">$10</a>
+        <a href="https://cash.app/$UncleButch3/20" target="_blank" class="donate-btn ca">$20</a>
+        <a href="https://cash.app/$UncleButch3/50" target="_blank" class="donate-btn ca">$50</a>
+        <a href="https://cash.app/$UncleButch3" target="_blank" class="donate-btn ca">Custom</a>
+      </div>
+    </section>
+    <div class="fine">
+      <small>&copy; 3Leathers — Handmade by Walter Lewis III</small>
+    </div>
   </footer>
-
-  <!-- Menu logic -->
-  <script>
-    const menuButton = document.getElementById('menuButton');
-    const sideMenu   = document.getElementById('sideMenu');
-
-    function toggleMenu() {
-      const isOpen = sideMenu.classList.toggle('open');
-      menuButton.setAttribute('aria-expanded', String(isOpen));
-    }
-
-    menuButton.addEventListener('click', toggleMenu);
-    menuButton.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' || e.key === ' ') {
-        e.preventDefault();
-        toggleMenu();
-      }
-    });
-  </script>
-
-  <!-- Close menu on link click, outside click, or Esc -->
-  <script>
-    // Close on link click
-    document.querySelectorAll('#sideMenu .navLink').forEach(a => {
-      a.addEventListener('click', () => {
-        sideMenu.classList.remove('open');
-        menuButton.setAttribute('aria-expanded', 'false');
-      });
-    });
-
-    // Close when clicking outside the menu or hamburger
-    document.addEventListener('click', (e) => {
-      if (!sideMenu.classList.contains('open')) return;
-      const insideMenu = sideMenu.contains(e.target);
-      const onHamburger = menuButton.contains(e.target);
-      if (!insideMenu && !onHamburger) {
-        sideMenu.classList.remove('open');
-        menuButton.setAttribute('aria-expanded', 'false');
-      }
-    });
-
-    // Close on Esc key
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape' && sideMenu.classList.contains('open')) {
-        sideMenu.classList.remove('open');
-        menuButton.setAttribute('aria-expanded', 'false');
-      }
-    });
-  </script>
 </body>
 </html>
