--- a/shop.html
+++ b/shop.html
@@ -68,7 +68,7 @@
     <h2>Wallets</h2>
     <div class="grid">
       <article class="card" data-item="Wallet — Bifold">
-        <img src="images/Logo-min.jpg" alt="Wallet thumbnail">
+       <img src="images/Wallet.jpeg" alt="Handmade leather wallets by 3Leathers" loading="lazy" width="600" height="450">
         <div class="pad">
           <h3>Wallet — Bifold</h3>
           <p class="muted">Classic bifold with hand-stitched edges. Choose leather color; internal layout adjustable on request.</p>
@@ -89,7 +89,7 @@
       </article>
 
       <article class="card" data-item="Wallet — Minimal">
-        <img src="images/Logo-min.jpg" alt="Wallet thumbnail">
+        <img src="images/Wallet.jpeg" alt="Handmade leather wallets by 3Leathers" loading="lazy" width="600" height="450">
         <div class="pad">
           <h3>Wallet — Minimal</h3>
           <p class="muted">Slim front-pocket carry. Holds essentials with a low profile.</p>
@@ -110,7 +110,7 @@
       </article>
 
       <article class="card" data-item="Wallet — Long">
-        <img src="images/Logo-min.jpg" alt="Wallet thumbnail">
+        <img src="images/Wallet.jpeg" alt="Handmade leather wallets by 3Leathers" loading="lazy" width="600" height="450">
         <div class="pad">
           <h3>Wallet — Long</h3>
           <p class="muted">Tall silhouette for bills laid flat; great for organizers.</p>
